upgrade to redmine 2.1

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,5 +3,5 @@ en:
   due_history: "Due History"
   label_change_reason: "Reason for changing due date"
   label_due_history_link: "View Due History"
-  label_due_delayed: "Delayed for {{value}}"
-  label_earlier_due: "Earlier {{value}}"
+  label_due_delayed: "Delayed for %{value}"
+  label_earlier_due: "Earlier %{value}"
